--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/prestige.png" class="img-responsive" alt="" />
+                        <img src="img/portfolio/prestige.jpg" class="img-responsive" alt="" />
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -205,7 +205,7 @@
                                 BabaSteels, Near Udhayam Cloth Center, N S R Road, Saibaba Colony, Coimbatore
                         </div>
                         <div class="row">
-                                Phone: 0422 4341108  |  <b>concact@babasteels.in</b>
+                                Phone: 0422 4341108  |  <b>contact@babasteels.in</b>
                         </div>
                         <div class="row">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3916.156799124532!2d76.946585!3d11.026859999999997!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1bc6d5d066be85b5!2sBaba+Steels!5e0!3m2!1sen!2sin!4v1402298453365" width="600" height="450" frameborder="0" style="border:0"></iframe>
@@ -284,7 +284,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/prestige.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/prestige.jpg" class="img-responsive img-centered" alt="">
                             <p>Prestige stoves, cookers, Pans.</p>
                             
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
