--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="roundimage" src="img/babasteels.jpg" alt="">
                     <div class="intro-text">
                         <span>Best place for all your home needs</span>
                         <hr class="star-light">
