--- a/index.html
+++ b/index.html
@@ -78,12 +78,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="roundimage" src="img/babasteels.jpg" alt="">
+                <ul>
+                    <li class="page-scroll">
+
+                    <a href="#about"><img class="roundimage" src="img/babasteels.jpg" alt=""></a>
+
+                    </li>
                     <div class="intro-text">
                         <span>Best place for all your home needs</span>
                         <hr class="star-light">
-                        <span class="skills">Prestige - Milton - Preethi - Steel vessels</span>
                     </div>
+                </ul>
                 </div>
             </div>
         </div>
