--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <ul>
                     <li class="page-scroll">
 
-                    <a href="#about"><img class="roundimage" src="img/babasteels.jpg" alt=""></a>
+                    <a href="#portfolio"><img class="roundimage" src="img/babasteels.jpg" alt=""></a>
 
                     </li>
                     <div class="intro-text">
