--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                     </li>
                     <div class="intro-text">
-                        <span>Best place for all your home needs</span>
+                        <span><h2>Best place for all your home needs</h2></span>
                         <hr class="star-light">
                     </div>
                 </ul>
