--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">What we sell?</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>What we sell?</h2>
                     <hr class="star-primary">
                 </div>
             </div>
