--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">BabaSteels</a>
+                <a class="navbar-brand" href="#page-top"><img src="img/babasteels_banner.png"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
