--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                     <br><br>
                     For any sales enquiries or feedback you can write to contact@babasteels.in
                     </p>
+                    <p> We accept all major credit cards and debit cards.</p>
                 </div>
                 
             </div>
